{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 127,
  "lineage": "af75f366-5937-a853-d6bc-4894f11664ed",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ntc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/networkInterfaces/ntc-nic",
            "internal_domain_name_suffix": "shtdssbbkv5epb52iwvqwy1jne.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/publicIPAddresses/ntc-ip",
                "subnet_id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ntc-network/subnets/ntc-subnet"
              }
            ],
            "location": "eastus",
            "name": "ntc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "ntc-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.ntc-ip",
            "azurerm_resource_group.ntc-rg",
            "azurerm_subnet.ntc-subnet",
            "azurerm_virtual_network.ntc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ntc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ntc-sg",
            "location": "eastus",
            "name": "ntc-sg",
            "resource_group_name": "ntc-resources",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ntc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ntc-sg/securityRules/ntc-dev-rule",
            "name": "ntc-dev-rule",
            "network_security_group_name": "ntc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "ntc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ntc-sg",
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ntc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/publicIPAddresses/ntc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ntc-ip",
            "resource_group_name": "ntc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ntc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ntc-network/subnets/ntc-subnet",
            "name": "ntc-subnet",
            "resource_group_name": "ntc-resources",
            "virtual_network_name": "ntc-network"
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg",
            "azurerm_virtual_network.ntc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ntc-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ntc-network/subnets/ntc-subnet",
            "network_security_group_id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ntc-sg",
            "subnet_id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ntc-network/subnets/ntc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ntc-sg",
            "azurerm_resource_group.ntc-rg",
            "azurerm_subnet.ntc-subnet",
            "azurerm_virtual_network.ntc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ntc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4839e691-5521-477e-87fc-45ab0b63696c",
            "id": "/subscriptions/b02b827d-461c-4628-b7b1-729f9d193b21/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ntc-network",
            "location": "eastus",
            "name": "ntc-network",
            "resource_group_name": "ntc-resources"
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    }
  ]
}